@@ -2,5 +2,5 @@
 
 source ~/startup/setup_environment 
 setenv OMP_LOG_LEVEL DEBUG
-~estar/third_generation/bin/test_templates.pl -project "U/06A/36" -pass "screfera"
+~estar/third_generation/bin/test_templates.pl -project "U/CMP/4" -pass "conezesl"
 
